parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    SPACE

Grammar

Rule 0     S' -> Query
Rule 1     Query -> SFW
Rule 2     Query -> CreateTableStmt
Rule 3     Query -> InsertStmt
Rule 4     Query -> DeleteStmt
Rule 5     Query -> UpdateStmt
Rule 6     Query -> DropTableStmt
Rule 7     SFW -> SELECT SelList FROM FromList WHERE Cond
Rule 8     SFW -> SELECT SelList FROM FromList
Rule 9     SelList -> TCNAME COMMA SelList
Rule 10    SelList -> TCNAME
Rule 11    SelList -> STAR
Rule 12    FromList -> TCNAME COMMA FromList
Rule 13    FromList -> TCNAME
Rule 14    Cond -> TCNAME EQX CONSTANT
Rule 15    CreateTableStmt -> CREATE TABLE TCNAME LPAREN FieldDefList RPAREN
Rule 16    FieldDefList -> FieldDef COMMA FieldDefList
Rule 17    FieldDefList -> FieldDef
Rule 18    FieldDef -> TCNAME CHAR LPAREN CONSTANT RPAREN
Rule 19    FieldDef -> TCNAME INTEGER
Rule 20    InsertStmt -> INSERT INTO TCNAME VALUES LPAREN ValueList RPAREN
Rule 21    ValueList -> CONSTANT COMMA ValueList
Rule 22    ValueList -> CONSTANT
Rule 23    DeleteStmt -> DELETE FROM TCNAME
Rule 24    UpdateStmt -> UPDATE TCNAME SET TCNAME EQX CONSTANT WHERE TCNAME EQX CONSTANT
Rule 25    DropTableStmt -> DROP TABLE TCNAME

Terminals, with rules where they appear

AND                  : 
CHAR                 : 18
COMMA                : 9 12 16 21
CONSTANT             : 14 18 21 22 24 24
CREATE               : 15
DELETE               : 23
DROP                 : 25
EQX                  : 14 24 24
FROM                 : 7 8 23
INSERT               : 20
INTEGER              : 19
INTO                 : 20
LPAREN               : 15 18 20
RPAREN               : 15 18 20
SELECT               : 7 8
SET                  : 24
SPACE                : 
STAR                 : 11
TABLE                : 15 25
TCNAME               : 9 10 12 13 14 15 18 19 20 23 24 24 24 25
UPDATE               : 24
VALUES               : 20
WHERE                : 7 24
error                : 

Nonterminals, with rules where they appear

Cond                 : 7
CreateTableStmt      : 2
DeleteStmt           : 4
DropTableStmt        : 6
FieldDef             : 16 17
FieldDefList         : 15 16
FromList             : 7 8 12
InsertStmt           : 3
Query                : 0
SFW                  : 1
SelList              : 7 8 9
UpdateStmt           : 5
ValueList            : 20 21

Parsing method: LALR

state 0

    (0) S' -> . Query
    (1) Query -> . SFW
    (2) Query -> . CreateTableStmt
    (3) Query -> . InsertStmt
    (4) Query -> . DeleteStmt
    (5) Query -> . UpdateStmt
    (6) Query -> . DropTableStmt
    (7) SFW -> . SELECT SelList FROM FromList WHERE Cond
    (8) SFW -> . SELECT SelList FROM FromList
    (15) CreateTableStmt -> . CREATE TABLE TCNAME LPAREN FieldDefList RPAREN
    (20) InsertStmt -> . INSERT INTO TCNAME VALUES LPAREN ValueList RPAREN
    (23) DeleteStmt -> . DELETE FROM TCNAME
    (24) UpdateStmt -> . UPDATE TCNAME SET TCNAME EQX CONSTANT WHERE TCNAME EQX CONSTANT
    (25) DropTableStmt -> . DROP TABLE TCNAME

    SELECT          shift and go to state 8
    CREATE          shift and go to state 9
    INSERT          shift and go to state 10
    DELETE          shift and go to state 11
    UPDATE          shift and go to state 12
    DROP            shift and go to state 13

    Query                          shift and go to state 1
    SFW                            shift and go to state 2
    CreateTableStmt                shift and go to state 3
    InsertStmt                     shift and go to state 4
    DeleteStmt                     shift and go to state 5
    UpdateStmt                     shift and go to state 6
    DropTableStmt                  shift and go to state 7

state 1

    (0) S' -> Query .



state 2

    (1) Query -> SFW .

    $end            reduce using rule 1 (Query -> SFW .)


state 3

    (2) Query -> CreateTableStmt .

    $end            reduce using rule 2 (Query -> CreateTableStmt .)


state 4

    (3) Query -> InsertStmt .

    $end            reduce using rule 3 (Query -> InsertStmt .)


state 5

    (4) Query -> DeleteStmt .

    $end            reduce using rule 4 (Query -> DeleteStmt .)


state 6

    (5) Query -> UpdateStmt .

    $end            reduce using rule 5 (Query -> UpdateStmt .)


state 7

    (6) Query -> DropTableStmt .

    $end            reduce using rule 6 (Query -> DropTableStmt .)


state 8

    (7) SFW -> SELECT . SelList FROM FromList WHERE Cond
    (8) SFW -> SELECT . SelList FROM FromList
    (9) SelList -> . TCNAME COMMA SelList
    (10) SelList -> . TCNAME
    (11) SelList -> . STAR

    TCNAME          shift and go to state 15
    STAR            shift and go to state 16

    SelList                        shift and go to state 14

state 9

    (15) CreateTableStmt -> CREATE . TABLE TCNAME LPAREN FieldDefList RPAREN

    TABLE           shift and go to state 17


state 10

    (20) InsertStmt -> INSERT . INTO TCNAME VALUES LPAREN ValueList RPAREN

    INTO            shift and go to state 18


state 11

    (23) DeleteStmt -> DELETE . FROM TCNAME

    FROM            shift and go to state 19


state 12

    (24) UpdateStmt -> UPDATE . TCNAME SET TCNAME EQX CONSTANT WHERE TCNAME EQX CONSTANT

    TCNAME          shift and go to state 20


state 13

    (25) DropTableStmt -> DROP . TABLE TCNAME

    TABLE           shift and go to state 21


state 14

    (7) SFW -> SELECT SelList . FROM FromList WHERE Cond
    (8) SFW -> SELECT SelList . FROM FromList

    FROM            shift and go to state 22


state 15

    (9) SelList -> TCNAME . COMMA SelList
    (10) SelList -> TCNAME .

    COMMA           shift and go to state 23
    FROM            reduce using rule 10 (SelList -> TCNAME .)


state 16

    (11) SelList -> STAR .

    FROM            reduce using rule 11 (SelList -> STAR .)


state 17

    (15) CreateTableStmt -> CREATE TABLE . TCNAME LPAREN FieldDefList RPAREN

    TCNAME          shift and go to state 24


state 18

    (20) InsertStmt -> INSERT INTO . TCNAME VALUES LPAREN ValueList RPAREN

    TCNAME          shift and go to state 25


state 19

    (23) DeleteStmt -> DELETE FROM . TCNAME

    TCNAME          shift and go to state 26


state 20

    (24) UpdateStmt -> UPDATE TCNAME . SET TCNAME EQX CONSTANT WHERE TCNAME EQX CONSTANT

    SET             shift and go to state 27


state 21

    (25) DropTableStmt -> DROP TABLE . TCNAME

    TCNAME          shift and go to state 28


state 22

    (7) SFW -> SELECT SelList FROM . FromList WHERE Cond
    (8) SFW -> SELECT SelList FROM . FromList
    (12) FromList -> . TCNAME COMMA FromList
    (13) FromList -> . TCNAME

    TCNAME          shift and go to state 30

    FromList                       shift and go to state 29

state 23

    (9) SelList -> TCNAME COMMA . SelList
    (9) SelList -> . TCNAME COMMA SelList
    (10) SelList -> . TCNAME
    (11) SelList -> . STAR

    TCNAME          shift and go to state 15
    STAR            shift and go to state 16

    SelList                        shift and go to state 31

state 24

    (15) CreateTableStmt -> CREATE TABLE TCNAME . LPAREN FieldDefList RPAREN

    LPAREN          shift and go to state 32


state 25

    (20) InsertStmt -> INSERT INTO TCNAME . VALUES LPAREN ValueList RPAREN

    VALUES          shift and go to state 33


state 26

    (23) DeleteStmt -> DELETE FROM TCNAME .

    $end            reduce using rule 23 (DeleteStmt -> DELETE FROM TCNAME .)


state 27

    (24) UpdateStmt -> UPDATE TCNAME SET . TCNAME EQX CONSTANT WHERE TCNAME EQX CONSTANT

    TCNAME          shift and go to state 34


state 28

    (25) DropTableStmt -> DROP TABLE TCNAME .

    $end            reduce using rule 25 (DropTableStmt -> DROP TABLE TCNAME .)


state 29

    (7) SFW -> SELECT SelList FROM FromList . WHERE Cond
    (8) SFW -> SELECT SelList FROM FromList .

    WHERE           shift and go to state 35
    $end            reduce using rule 8 (SFW -> SELECT SelList FROM FromList .)


state 30

    (12) FromList -> TCNAME . COMMA FromList
    (13) FromList -> TCNAME .

    COMMA           shift and go to state 36
    WHERE           reduce using rule 13 (FromList -> TCNAME .)
    $end            reduce using rule 13 (FromList -> TCNAME .)


state 31

    (9) SelList -> TCNAME COMMA SelList .

    FROM            reduce using rule 9 (SelList -> TCNAME COMMA SelList .)


state 32

    (15) CreateTableStmt -> CREATE TABLE TCNAME LPAREN . FieldDefList RPAREN
    (16) FieldDefList -> . FieldDef COMMA FieldDefList
    (17) FieldDefList -> . FieldDef
    (18) FieldDef -> . TCNAME CHAR LPAREN CONSTANT RPAREN
    (19) FieldDef -> . TCNAME INTEGER

    TCNAME          shift and go to state 37

    FieldDefList                   shift and go to state 38
    FieldDef                       shift and go to state 39

state 33

    (20) InsertStmt -> INSERT INTO TCNAME VALUES . LPAREN ValueList RPAREN

    LPAREN          shift and go to state 40


state 34

    (24) UpdateStmt -> UPDATE TCNAME SET TCNAME . EQX CONSTANT WHERE TCNAME EQX CONSTANT

    EQX             shift and go to state 41


state 35

    (7) SFW -> SELECT SelList FROM FromList WHERE . Cond
    (14) Cond -> . TCNAME EQX CONSTANT

    TCNAME          shift and go to state 43

    Cond                           shift and go to state 42

state 36

    (12) FromList -> TCNAME COMMA . FromList
    (12) FromList -> . TCNAME COMMA FromList
    (13) FromList -> . TCNAME

    TCNAME          shift and go to state 30

    FromList                       shift and go to state 44

state 37

    (18) FieldDef -> TCNAME . CHAR LPAREN CONSTANT RPAREN
    (19) FieldDef -> TCNAME . INTEGER

    CHAR            shift and go to state 45
    INTEGER         shift and go to state 46


state 38

    (15) CreateTableStmt -> CREATE TABLE TCNAME LPAREN FieldDefList . RPAREN

    RPAREN          shift and go to state 47


state 39

    (16) FieldDefList -> FieldDef . COMMA FieldDefList
    (17) FieldDefList -> FieldDef .

    COMMA           shift and go to state 48
    RPAREN          reduce using rule 17 (FieldDefList -> FieldDef .)


state 40

    (20) InsertStmt -> INSERT INTO TCNAME VALUES LPAREN . ValueList RPAREN
    (21) ValueList -> . CONSTANT COMMA ValueList
    (22) ValueList -> . CONSTANT

    CONSTANT        shift and go to state 50

    ValueList                      shift and go to state 49

state 41

    (24) UpdateStmt -> UPDATE TCNAME SET TCNAME EQX . CONSTANT WHERE TCNAME EQX CONSTANT

    CONSTANT        shift and go to state 51


state 42

    (7) SFW -> SELECT SelList FROM FromList WHERE Cond .

    $end            reduce using rule 7 (SFW -> SELECT SelList FROM FromList WHERE Cond .)


state 43

    (14) Cond -> TCNAME . EQX CONSTANT

    EQX             shift and go to state 52


state 44

    (12) FromList -> TCNAME COMMA FromList .

    WHERE           reduce using rule 12 (FromList -> TCNAME COMMA FromList .)
    $end            reduce using rule 12 (FromList -> TCNAME COMMA FromList .)


state 45

    (18) FieldDef -> TCNAME CHAR . LPAREN CONSTANT RPAREN

    LPAREN          shift and go to state 53


state 46

    (19) FieldDef -> TCNAME INTEGER .

    COMMA           reduce using rule 19 (FieldDef -> TCNAME INTEGER .)
    RPAREN          reduce using rule 19 (FieldDef -> TCNAME INTEGER .)


state 47

    (15) CreateTableStmt -> CREATE TABLE TCNAME LPAREN FieldDefList RPAREN .

    $end            reduce using rule 15 (CreateTableStmt -> CREATE TABLE TCNAME LPAREN FieldDefList RPAREN .)


state 48

    (16) FieldDefList -> FieldDef COMMA . FieldDefList
    (16) FieldDefList -> . FieldDef COMMA FieldDefList
    (17) FieldDefList -> . FieldDef
    (18) FieldDef -> . TCNAME CHAR LPAREN CONSTANT RPAREN
    (19) FieldDef -> . TCNAME INTEGER

    TCNAME          shift and go to state 37

    FieldDef                       shift and go to state 39
    FieldDefList                   shift and go to state 54

state 49

    (20) InsertStmt -> INSERT INTO TCNAME VALUES LPAREN ValueList . RPAREN

    RPAREN          shift and go to state 55


state 50

    (21) ValueList -> CONSTANT . COMMA ValueList
    (22) ValueList -> CONSTANT .

    COMMA           shift and go to state 56
    RPAREN          reduce using rule 22 (ValueList -> CONSTANT .)


state 51

    (24) UpdateStmt -> UPDATE TCNAME SET TCNAME EQX CONSTANT . WHERE TCNAME EQX CONSTANT

    WHERE           shift and go to state 57


state 52

    (14) Cond -> TCNAME EQX . CONSTANT

    CONSTANT        shift and go to state 58


state 53

    (18) FieldDef -> TCNAME CHAR LPAREN . CONSTANT RPAREN

    CONSTANT        shift and go to state 59


state 54

    (16) FieldDefList -> FieldDef COMMA FieldDefList .

    RPAREN          reduce using rule 16 (FieldDefList -> FieldDef COMMA FieldDefList .)


state 55

    (20) InsertStmt -> INSERT INTO TCNAME VALUES LPAREN ValueList RPAREN .

    $end            reduce using rule 20 (InsertStmt -> INSERT INTO TCNAME VALUES LPAREN ValueList RPAREN .)


state 56

    (21) ValueList -> CONSTANT COMMA . ValueList
    (21) ValueList -> . CONSTANT COMMA ValueList
    (22) ValueList -> . CONSTANT

    CONSTANT        shift and go to state 50

    ValueList                      shift and go to state 60

state 57

    (24) UpdateStmt -> UPDATE TCNAME SET TCNAME EQX CONSTANT WHERE . TCNAME EQX CONSTANT

    TCNAME          shift and go to state 61


state 58

    (14) Cond -> TCNAME EQX CONSTANT .

    $end            reduce using rule 14 (Cond -> TCNAME EQX CONSTANT .)


state 59

    (18) FieldDef -> TCNAME CHAR LPAREN CONSTANT . RPAREN

    RPAREN          shift and go to state 62


state 60

    (21) ValueList -> CONSTANT COMMA ValueList .

    RPAREN          reduce using rule 21 (ValueList -> CONSTANT COMMA ValueList .)


state 61

    (24) UpdateStmt -> UPDATE TCNAME SET TCNAME EQX CONSTANT WHERE TCNAME . EQX CONSTANT

    EQX             shift and go to state 63


state 62

    (18) FieldDef -> TCNAME CHAR LPAREN CONSTANT RPAREN .

    COMMA           reduce using rule 18 (FieldDef -> TCNAME CHAR LPAREN CONSTANT RPAREN .)
    RPAREN          reduce using rule 18 (FieldDef -> TCNAME CHAR LPAREN CONSTANT RPAREN .)


state 63

    (24) UpdateStmt -> UPDATE TCNAME SET TCNAME EQX CONSTANT WHERE TCNAME EQX . CONSTANT

    CONSTANT        shift and go to state 64


state 64

    (24) UpdateStmt -> UPDATE TCNAME SET TCNAME EQX CONSTANT WHERE TCNAME EQX CONSTANT .

    $end            reduce using rule 24 (UpdateStmt -> UPDATE TCNAME SET TCNAME EQX CONSTANT WHERE TCNAME EQX CONSTANT .)

